dataset1235/2025-2/1153765216/users/2299863494/executions/2747719322_2667036473.log
== RUN (2025-08-28 17:04:09)
-- CODE: 
tempC = float(imput("digite a tempreratura em graus celsius: "))
tempK = tempC + 273.15
print(round(tempK, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:01:58)
-- CODE: 
tempC = float(imput("digite a tempreratura em graus celsius: "))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:04:04)
-- CODE: 
tempC = float(imput("digite a tempreratura em graus celsius: "))
tempK = tempC + 273.15
print(round(tempK, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:01:57)
-- CODE: 
tempC = float(imput("digite a tempreratura em graus celsius: "))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(imput("digite a tempreratura em graus celsius: "))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:05:25)
-- CODE: 
tempC = float(input("digite a tempreratura em graus celsius: "))
tempK = tempC + 273.15
print(round(tempK, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
digite a tempreratura em graus celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
digite a tempreratura em graus celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
digite a tempreratura em graus celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
digite a tempreratura em graus celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
digite a tempreratura em graus celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
digite a tempreratura em graus celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
